refactor(cypress): rename scripts based on ports

--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -260,4 +260,4 @@ jobs:
           docker-compose -f docker-compose.ci.yml up -d
       - name: Cypress
         run: |
-          cd cypress && yarn test:cypress:headless:ci
+          cd cypress && yarn test:cypress:headless:5000
