--- a/docker-compose.ci.yml
+++ b/docker-compose.ci.yml
@@ -81,7 +81,7 @@ services:
   # OpenTelemetry Collector
   opentelemetry-collector:
     container_name: hm_opentelemetry_collector
-    image: otel/opentelemetry-collector:latest
+    image: otel/opentelemetry-collector:0.19.0
     command: [
       "--config=/conf/otel-collector.config.yaml",
       "--log-level=DEBUG"
