chore(app): move eject script to the bottom

--- a/mobile/package.json
+++ b/mobile/package.json
@@ -10,8 +10,8 @@
     "android": "expo start --android",
     "ios": "expo start --ios",
     "web": "expo start --web",
-    "eject": "expo eject",
-    "debug": "open \"rndebugger://set-debugger-loc?host=localhost&port=19001\""
+    "debug": "open \"rndebugger://set-debugger-loc?host=localhost&port=19001\"",
+    "eject": "expo eject"
   },
   "dependencies": {
     "@eva-design/eva": "2.0.0",
