--- a/web/package.json
+++ b/web/package.json
@@ -5,7 +5,6 @@
     "node": "14.x"
   },
   "scripts": {
-    "eject": "react-scripts eject",
     "dev": "react-scripts start",
     "prebuild": "sh ./bin/prebuild.sh",
     "build": "react-scripts build",
@@ -18,7 +17,8 @@
     "storybook": "start-storybook --static-dir public --port 9009",
     "storybook:build": "build-storybook -s public",
     "storybook:publish": "chromatic --build-script-name storybook:build",
-    "lighthouse": "lhci autorun"
+    "lighthouse": "lhci autorun",
+    "eject": "react-scripts eject"
   },
   "eslintConfig": {
     "extends": [
