--- a/mobile/package.json
+++ b/mobile/package.json
@@ -11,6 +11,7 @@
     "ios": "expo start --ios",
     "web": "expo start --web",
     "debug": "open \"rndebugger://set-debugger-loc?host=localhost&port=19001\"",
+    "test": "jest",
     "eject": "expo eject"
   },
   "dependencies": {
@@ -28,9 +29,13 @@
   },
   "devDependencies": {
     "@babel/core": "7.13.8",
+    "@types/jest": "26.0.20",
     "@types/react": "17.0.2",
     "@types/react-dom": "17.0.1",
     "@types/react-native": "0.63.50",
+    "@types/react-test-renderer": "17.0.1",
+    "jest-expo": "40.0.2",
+    "react-test-renderer": "17.0.1",
     "typescript": "4.2.2"
   }
 }
