test(coverage): cover mobile

--- a/.gitignore
+++ b/.gitignore
@@ -5,7 +5,9 @@
 .DS_Store
 .env.development.local
 .env.production.local
+coverage
 node_modules
+tmp
 yarn-error.log
 
 web/.eslintcache
@@ -17,10 +19,14 @@ web/storybook-static
 web/tmp
 
 mobile/.expo
+mobile/coverage
+mobile/tmp
 
 api/.clinic
 api/build
+api/coverage
 api/dist
+api/tmp
 
 cypress/cypress/fixtures/example.json
 cypress/cypress/screenshots
