--- a/mobile/package.json
+++ b/mobile/package.json
@@ -12,6 +12,8 @@
     "web": "expo start --web",
     "debug": "open \"rndebugger://set-debugger-loc?host=localhost&port=19001\"",
     "test": "jest",
+    "test:watch": "jest --watch",
+    "test:coverage": "jest --coverage",
     "eject": "expo eject"
   },
   "dependencies": {
