--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -76,6 +76,40 @@ jobs:
         run: |
           yarn test
 
+  mobile-test:
+    name: Mobile - Test
+    runs-on: ubuntu-20.04
+    steps:
+      - name: Cancel previous runs
+        uses: styfle/cancel-workflow-action@0.8.0
+        with:
+          access_token: ${{ github.token }}
+      - name: Checkout
+        uses: actions/checkout@v2
+      - name: Set up Node.js
+        uses: actions/setup-node@v2
+        with:
+          node-version: '14.x'
+      - name: Get cache directory path
+        id: yarn-cache-dir-path
+        run: echo "::set-output name=dir::$(yarn cache dir)"
+      - name: Cache
+        uses: actions/cache@v2
+        id: yarn-cache
+        with:
+          path: ${{ steps.yarn-cache-dir-path.outputs.dir }}
+          key: ${{ runner.os }}-yarn-${{ hashFiles('**/yarn.lock') }}
+          restore-keys: |
+            ${{ runner.os }}-yarn-
+      - name: Install dependencies
+        run: |
+          yarn install --frozen-lockfile
+          cd mobile && yarn install --frozen-lockfile
+      - name: Test
+        working-directory: mobile
+        run: |
+          yarn test
+
   api-test:
     name: API - Test
     runs-on: ubuntu-20.04
@@ -139,6 +173,7 @@ jobs:
         run: |
           yarn install --frozen-lockfile
           cd web && yarn install --frozen-lockfile
+          cd ../mobile && yarn install --frozen-lockfile
           cd ../api && yarn install --frozen-lockfile
       - name: Coverage
         run: |
