--- a/mobile/package.json
+++ b/mobile/package.json
@@ -23,11 +23,18 @@
     "expo-app-loading": "1.0.1",
     "expo-font": "8.4.0",
     "expo-status-bar": "1.0.3",
+    "graphql": "15.5.0",
+    "graphql-tag": "2.11.0",
     "react": "17.0.1",
     "react-dom": "17.0.1",
     "react-native": "https://github.com/expo/react-native/archive/sdk-39.0.4.tar.gz",
     "react-native-svg": "12.1.0",
-    "react-native-web": "0.15.0"
+    "react-native-web": "0.15.0",
+    "react-redux": "7.2.2",
+    "redux": "4.0.5",
+    "redux-devtools-extension": "2.13.8",
+    "redux-observable": "1.2.0",
+    "rxjs": "6.6.6"
   },
   "devDependencies": {
     "@babel/core": "7.13.8",
@@ -35,9 +42,11 @@
     "@types/react": "17.0.2",
     "@types/react-dom": "17.0.1",
     "@types/react-native": "0.63.50",
+    "@types/react-redux": "7.1.16",
     "@types/react-test-renderer": "17.0.1",
     "jest-expo": "40.0.2",
     "react-test-renderer": "17.0.1",
+    "redux-mock-store": "1.5.4",
     "typescript": "4.2.2"
   }
 }
