--- a/mobile/package.json
+++ b/mobile/package.json
@@ -44,6 +44,7 @@
     "@types/react-native": "0.63.50",
     "@types/react-redux": "7.1.16",
     "@types/react-test-renderer": "17.0.1",
+    "@types/redux-mock-store": "1.0.2",
     "jest-expo": "40.0.2",
     "react-test-renderer": "17.0.1",
     "redux-mock-store": "1.5.4",
