feat(mobile): read env

--- a/mobile/package.json
+++ b/mobile/package.json
@@ -7,9 +7,9 @@
   },
   "scripts": {
     "dev": "expo start",
-    "android": "expo start --android",
-    "ios": "expo start --ios",
-    "web": "expo start --web",
+    "dev:android": "expo start --android",
+    "dev:ios": "expo start --ios",
+    "dev:web": "expo start --web",
     "debug": "open \"rndebugger://set-debugger-loc?host=localhost&port=19001\"",
     "test": "jest",
     "test:watch": "jest --watch",
@@ -46,6 +46,7 @@
     "@types/react-test-renderer": "17.0.1",
     "@types/redux-mock-store": "1.0.2",
     "jest-expo": "40.0.2",
+    "react-native-dotenv": "2.5.3",
     "react-test-renderer": "17.0.1",
     "redux-mock-store": "1.5.4",
     "typescript": "4.2.2"
