--- a/mobile/package.json
+++ b/mobile/package.json
@@ -38,6 +38,7 @@
   },
   "devDependencies": {
     "@babel/core": "7.13.8",
+    "@testing-library/react-native": "7.2.0",
     "@types/jest": "26.0.20",
     "@types/react": "17.0.2",
     "@types/react-dom": "17.0.1",
