--- a/docker/prometheus/prometheus.development.yaml
+++ b/docker/prometheus/prometheus.development.yaml
@@ -1,7 +1,19 @@
 global:
-  scrape_interval: 5s
+  scrape_interval: 15s
+  evaluation_interval: 15s
 
 scrape_configs:
-  - job_name: 'collector'
+  - job_name: 'opentelemetry-collector'
+    scrape_interval: 5s
     static_configs:
       - targets: ['hm_opentelemetry_collector:9464']
+
+  - job_name: 'node-exporter'
+    scrape_interval: 15s
+    static_configs:
+      - targets: ['hm_node_exporter:9100']
+
+  - job_name: 'prometheus'
+    scrape_interval: 15s
+    static_configs:
+      - targets: ['hm_prometheus:9090']
