chore(docker): change restart to unless-stopped

--- a/docker-compose.development.yml
+++ b/docker-compose.development.yml
@@ -10,7 +10,7 @@ services:
       dockerfile: Dockerfile.nginx.development
     environment:
       - NODE_ENV=development
-    restart: always
+    restart: unless-stopped
     ports:
       - "80:80"
     depends_on:
@@ -31,7 +31,7 @@ services:
       driver: fluentd
       options:
         fluentd-address: 0.0.0.0:24224
-    restart: always
+    restart: unless-stopped
     ports:
       - "5000:5000"
     depends_on:
@@ -45,7 +45,7 @@ services:
     image: redis:6.2.1-alpine
     volumes:
       - redis_data:/data
-    restart: always
+    restart: unless-stopped
     ports:
       - "6379:6379"
 
@@ -58,7 +58,7 @@ services:
       - ./docker/postgres/init.sql:/docker-entrypoint-initdb.d/init.sql
     env_file:
       - ./docker/postgres/.env.development.local
-    restart: always
+    restart: unless-stopped
     ports:
       - "5432:5432"
 
@@ -73,7 +73,7 @@ services:
       options:
         max-size: "100m"
         max-file: "5"
-    restart: always
+    restart: unless-stopped
     ports:
       - "24224:24224"
       - "5140:5140/udp"
@@ -91,7 +91,7 @@ services:
     ]
     volumes:
       - ./docker/opentelemetry-collector/otel-collector.config.yaml:/conf/otel-collector.config.yaml
-    restart: always
+    restart: unless-stopped
     ports:
       - "9464:9464"
       - "55680:55680"
@@ -111,7 +111,7 @@ services:
     environment:
       - SPAN_STORAGE_TYPE=elasticsearch
       - LOG_LEVEL=debug
-    restart: always
+    restart: unless-stopped
     ports:
       - "14250"
       - "14268"
@@ -131,7 +131,7 @@ services:
       - "6831/udp"
       - "6832/udp"
       - "5778"
-    restart: always
+    restart: unless-stopped
     depends_on:
       - jaeger-collector
 
@@ -146,7 +146,7 @@ services:
     environment:
       - SPAN_STORAGE_TYPE=elasticsearch
       - LOG_LEVEL=debug
-    restart: always
+    restart: unless-stopped
     ports:
       - "16686:16686"
       - "16687"
@@ -160,7 +160,7 @@ services:
     image: docker.elastic.co/elasticsearch/elasticsearch-oss:7.10.2
     environment:
       - discovery.type=single-node
-    restart: always
+    restart: unless-stopped
     ports:
       - "9200/tcp"
 
@@ -169,7 +169,7 @@ services:
     container_name: hm_kibana
     # https://www.docker.elastic.co/r/kibana/kibana-oss
     image: docker.elastic.co/kibana/kibana-oss:7.10.2
-    restart: always
+    restart: unless-stopped
     ports:
       - "5601:5601"
 
@@ -179,7 +179,7 @@ services:
     image: prom/prometheus:v2.25.0
     volumes:
       - ./docker/prometheus/prometheus.development.yaml:/etc/prometheus/prometheus.yml
-    restart: always
+    restart: unless-stopped
     ports:
       - "9090:9090"
 
@@ -187,7 +187,7 @@ services:
   node:
     container_name: hm_node_exporter
     image: prom/node-exporter:v1.1.1
-    restart: always
+    restart: unless-stopped
     ports:
       - "9100:9100"
 
@@ -198,7 +198,7 @@ services:
     environment:
       # https://grafana.com/grafana/plugins
       - GF_INSTALL_PLUGINS=grafana-clock-panel,grafana-simple-json-datasource,grafana-piechart-panel
-    restart: always
+    restart: unless-stopped
     ports:
       - "3000:3000"
     depends_on:
