--- a/Dockerfile.api.production
+++ b/Dockerfile.api.production
@@ -8,22 +8,22 @@ ENV PATH /app/node_modules/.bin:$PATH
 COPY ["package.json", "yarn.lock", "./"]
 COPY ["web/package.json", "web/yarn.lock", "./web/"]
 COPY ["api/package.json", "api/yarn.lock", "./api/"]
-RUN yarn install
-RUN cd web && yarn install
-RUN cd api && yarn install
+RUN npm install
+RUN cd web && npm install
+RUN cd api && npm install
 
 # Build web
 COPY web/.env.production.local.example web/.env.production.local
 COPY web web
 # Skip lint check during react-scripts build
 RUN rm -f web/.eslintrc.js
-RUN cd web && cross-env REACT_APP_LIGHTSTEP_TOKEN="$REACT_APP_LIGHTSTEP_TOKEN" yarn build
+RUN cd web && cross-env REACT_APP_LIGHTSTEP_TOKEN="$REACT_APP_LIGHTSTEP_TOKEN" npm run build
 
 # Build API
 COPY api/.env.production.local.example api/.env.production.local
 COPY api api
 RUN cp -r web/build/ api/dist/
-RUN cd api && yarn build
+RUN cd api && npm run build
 
 EXPOSE 5000
 CMD ["yarn", "start"]
