--- a/package.json
+++ b/package.json
@@ -20,14 +20,14 @@
     "setup": "sh ./bin/setup.sh",
     "clean": "sh ./bin/clean.sh",
     "build": "sh ./bin/build.sh",
-    "start": "cd api && yarn serve:production",
-    "dev": "cd api && yarn dev",
+    "start": "cd api && npm run serve:production",
+    "dev": "cd api && npm run dev",
     "lint:js": "eslint . --ext .js,.ts,.tsx",
     "lint:js:report": "eslint-nibble . --ext .js,.ts,.tsx",
     "lint:js:fix": "eslint . --ext .js,.ts,.tsx --fix",
     "lint:css": "stylelint \"**/*.css\" \"!**/build/**\" \"!**/dist/**\" \"!**/coverage/**\"",
     "lint:css:fix": "stylelint \"**/*.css\" \"!**/build/**\" \"!**/dist/**\" \"!**/coverage/**\" --fix",
-    "test": "cd web && yarn test && cd ../api && yarn test",
+    "test": "cd web && npm test && cd ../api && npm test",
     "test:coverage": "sh bin/testCoverage.sh",
     "test:coverage:publish": "cat coverage/lcov.info | codecov"
   },
