--- a/Dockerfile.api.development
+++ b/Dockerfile.api.development
@@ -5,22 +5,22 @@ WORKDIR /app
 ENV PATH /app/node_modules/.bin:$PATH
 
 # Install dependencies
-COPY ["package.json", "yarn.lock", "./"]
-COPY ["web/package.json", "web/yarn.lock", "./web/"]
-COPY ["api/package.json", "api/yarn.lock", "./api/"]
-RUN yarn install
-RUN cd web && yarn install
-RUN cd api && yarn install
+COPY ["package.json", "package-lock.json", "./"]
+COPY ["web/package.json", "web/package-lock.json", "./web/"]
+COPY ["api/package.json", "api/package-lock.json", "./api/"]
+RUN npm install
+RUN cd web && npm install
+RUN cd api && npm install
 
 # Build web
 # https://create-react-app.dev/docs/adding-custom-environment-variables/
-# In create-react-app, when you run 'yarn build' to make a production bundle, it is always equal to 'production'.
+# In create-react-app, when you run 'npm run build' to make a production bundle, it is always equal to 'production'.
 # So using REACT_APP_SERVER_WS_PROTOCOL=ws in .env.production.local.example
 COPY web/.env.production.local.example web/.env.production.local
 COPY web web
 # Skip lint check during react-scripts build
 RUN rm -f web/.eslintrc.js
-RUN cd web && cross-env REACT_APP_LIGHTSTEP_TOKEN="$REACT_APP_LIGHTSTEP_TOKEN" yarn build
+RUN cd web && cross-env REACT_APP_LIGHTSTEP_TOKEN="$REACT_APP_LIGHTSTEP_TOKEN" npm run build
 
 # Build API
 COPY api/.env.development.local.example.docker api/.env.development.local
@@ -28,4 +28,4 @@ COPY api api
 RUN cp -r web/build/ api/dist/
 
 EXPOSE 5000
-CMD ["yarn", "dev"]
+CMD ["npm", "run", "dev"]
