chore(git): ignore dataset

--- a/.gitignore
+++ b/.gitignore
@@ -31,3 +31,6 @@ cypress/cypress/fixtures/example.json
 cypress/cypress/screenshots
 
 locust/__pycache__
+
+neural-network/__pycache__
+neural-network/dataset
