chore(neural): update script

--- a/.dockerignore
+++ b/.dockerignore
@@ -25,3 +25,7 @@ cypress/cypress/fixtures/example.json
 cypress/cypress/screenshots
 
 locust/__pycache__
+
+neural-network/__pycache__
+neural-network/dataset
+neural-network/wandb
