chore(neural): add debug script

--- a/neural-network/Makefile
+++ b/neural-network/Makefile
@@ -1,2 +1,5 @@
 train:
 	python main.py --dataset ogbg-molhiv --gnn gcn
+
+debug:
+	python main.py --dataset ogbg-molhiv --gnn gcn --feature simple --epochs 30
