--- a/neural-network/requirements.txt
+++ b/neural-network/requirements.txt
@@ -1,6 +1,8 @@
 aiohttp-cors==0.7.0
 aiohttp==3.7.4.post0
 black==20.8b1
-wandb==0.10.22
+numpy==1.20.1
 ogb==1.2.6
 torch==1.8.0
+tqdm==4.59.0
+wandb==0.10.22
