refactor(neural): dataloader

--- a/.gitignore
+++ b/.gitignore
@@ -1,10 +1,10 @@
 # https://docs.github.com/en/github/using-git/ignoring-files
 
-.idea
-
 .DS_Store
 .env.development.local
 .env.production.local
+.idea
+__pycache__
 coverage
 node_modules
 tmp
@@ -30,8 +30,5 @@ api/tmp
 cypress/cypress/fixtures/example.json
 cypress/cypress/screenshots
 
-locust/__pycache__
-
-neural-network/__pycache__
 neural-network/dataset
 neural-network/wandb
