feat(api): add mutation testing

--- a/.gitignore
+++ b/.gitignore
@@ -22,10 +22,12 @@ mobile/coverage
 mobile/tmp
 
 api/.clinic
+api/.stryker-tmp
 api/build
 api/coverage
 api/dist
 api/tmp
+api/reports
 
 cypress/cypress/fixtures/example.json
 cypress/cypress/screenshots
