--- a/api/package.json
+++ b/api/package.json
@@ -15,6 +15,7 @@
     "test": "jest",
     "test:watch": "jest --watch",
     "test:coverage": "jest --coverage",
+    "test:stryker": "stryker run",
     "autocannon": "autocannon http://localhost:5000",
     "profile:endpoints": "npm run build && NODE_ENV=production node build/scripts/profileEndpoints.js",
     "profile:bubbleprof": "npm run build && cross-env NODE_ENV=production clinic bubbleprof --on-port 'sh bin/profile.sh' -- node build/src/index.js",
@@ -83,6 +84,8 @@
     "@babel/core": "7.13.10",
     "@babel/preset-env": "7.13.10",
     "@babel/preset-typescript": "7.13.0",
+    "@stryker-mutator/core": "4.5.1",
+    "@stryker-mutator/jest-runner": "4.5.1",
     "@types/autocannon": "4.1.0",
     "@types/bcrypt": "3.0.0",
     "@types/connect-timeout": "0.0.34",
