--- a/package.json
+++ b/package.json
@@ -27,7 +27,7 @@
     "lint:js:fix": "eslint . --ext .js,.ts,.tsx --fix",
     "lint:css": "stylelint \"**/*.css\" \"!**/build/**\" \"!**/dist/**\" \"!**/coverage/**\"",
     "lint:css:fix": "stylelint \"**/*.css\" \"!**/build/**\" \"!**/dist/**\" \"!**/coverage/**\" --fix",
-    "test": "cd web && npm test && cd ../api && npm test",
+    "test": "cd web && npm test && cd ../mobile && npm test && cd ../api && npm test",
     "test:coverage": "sh bin/testCoverage.sh",
     "test:coverage:publish": "cat coverage/lcov.info | codecov"
   },
