feat(ethereum): add TypeScript

--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -38,6 +38,7 @@ jobs:
           cd ../mobile && npm ci
           cd ../api && npm ci
           cd ../cypress && npm ci
+          cd ../ethereum && npm ci
       - name: Lint
         run: |
           npm run lint:js
