--- a/.editorconfig
+++ b/.editorconfig
@@ -13,6 +13,9 @@ trim_trailing_whitespace = true
 [*.py]
 indent_size = 4
 
+[*.sol]
+indent_size = 4
+
 [Makefile]
 indent_size = 4
 indent_style = tab
