chore(app): sync ignore configs

--- a/.dockerignore
+++ b/.dockerignore
@@ -1,12 +1,29 @@
 # https://docs.docker.com/engine/reference/builder/#dockerignore-file
 
-.idea
-
 **/.DS_Store
 **/.env.development.local
 **/.env.production.local
+**/__pycache__
 **/node_modules
 
+.idea
+coverage
+
+api/.clinic
+api/.stryker-tmp
+api/build
+api/coverage
+api/dist
+api/reports
+api/tmp
+cypress/cypress/fixtures/example.json
+cypress/cypress/screenshots
+ethereum/build
+mobile/.expo
+mobile/coverage
+mobile/tmp
+neural-network/dataset
+neural-network/wandb
 web/.eslintcache
 web/.lighthouseci
 web/build
@@ -14,20 +31,3 @@ web/coverage
 web/public/sitemap.xml
 web/storybook-static
 web/tmp
-
-mobile/.expo
-
-api/.clinic
-api/build
-api/dist
-
-cypress/cypress/fixtures/example.json
-cypress/cypress/screenshots
-
-locust/__pycache__
-
-neural-network/__pycache__
-neural-network/dataset
-neural-network/wandb
-
-ethereum/build
