--- a/.gitignore
+++ b/.gitignore
@@ -1,14 +1,29 @@
 # https://docs.github.com/en/github/using-git/ignoring-files
 
-.DS_Store
-.env.development.local
-.env.production.local
-.idea
-__pycache__
-coverage
-node_modules
-tmp
+**/.DS_Store
+**/.env.development.local
+**/.env.production.local
+**/__pycache__
+**/node_modules
 
+/.idea
+/coverage
+
+api/.clinic
+api/.stryker-tmp
+api/build
+api/coverage
+api/dist
+api/reports
+api/tmp
+cypress/cypress/fixtures/example.json
+cypress/cypress/screenshots
+ethereum/build
+mobile/.expo
+mobile/coverage
+mobile/tmp
+neural-network/dataset
+neural-network/wandb
 web/.eslintcache
 web/.lighthouseci
 web/build
@@ -16,23 +31,3 @@ web/coverage
 web/public/sitemap.xml
 web/storybook-static
 web/tmp
-
-mobile/.expo
-mobile/coverage
-mobile/tmp
-
-api/.clinic
-api/.stryker-tmp
-api/build
-api/coverage
-api/dist
-api/tmp
-api/reports
-
-cypress/cypress/fixtures/example.json
-cypress/cypress/screenshots
-
-neural-network/dataset
-neural-network/wandb
-
-ethereum/build
