--- a/.eslintignore
+++ b/.eslintignore
@@ -1,30 +1,35 @@
+# https://eslint.org/docs/user-guide/configuring/ignoring-code#the-eslintignore-file
+
+**/.DS_Store
+**/.env.development.local
+**/.env.production.local
+**/__pycache__
+**/node_modules
+
 .idea
+coverage
 
-.DS_Store
-.env.development.local
-.env.production.local
-hongbomiao.crt
-hongbomiao.key
-node_modules
-
+api/.clinic
+api/.stryker-tmp
+api/build
+api/coverage
+api/dist
+api/reports
+api/tmp
+cypress/cypress/fixtures/example.json
+cypress/cypress/screenshots
+ethereum/build
+mobile/.expo
+mobile/coverage
+mobile/tmp
+neural-network/dataset
+neural-network/wandb
 web/.eslintcache
 web/.lighthouseci
 web/build
 web/coverage
 web/public/sitemap.xml
-web/src/shared/libs
 web/storybook-static
 web/tmp
 
-mobile/.expo
-
-api/.clinic
-api/build
-api/dist
-
-cypress/cypress/fixtures/example.json
-cypress/cypress/screenshots
-
-ethereum/build
-
-locust/__pycache__
+web/src/shared/libs
