--- a/ethereum/package.json
+++ b/ethereum/package.json
@@ -5,8 +5,7 @@
     "node": "14.x"
   },
   "scripts": {
-    "build": "tsc && babel build --out-dir build && copyfiles -u 1 src/**/*.sol build",
-    "compile": "node build/src/compile.js"
+    "build": "tsc && babel build --out-dir build && copyfiles -u 1 src/**/*.sol build"
   },
   "dependencies": {
     "solc": "0.8.2"
