ci(github): enable sollint

--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -43,6 +43,7 @@ jobs:
         run: |
           npm run lint:js
           npm run lint:css
+          npm run lint:sol
 
   web-test:
     name: Web - Test
