ci(mergify): include stryker and mobile test

--- a/.mergify.yml
+++ b/.mergify.yml
@@ -6,7 +6,9 @@ pull_request_rules:
       - author=Hongbo-Miao
       - check-success=Lint
       - check-success=Web - Test
+      - check-success=Mobile - Test
       - check-success=API - Test
+      - check-success=API - Stryker
       - check-success=Coverage
       - check-success=Web - Lighthouse
       - check-success=Web - Storybook
@@ -23,7 +25,9 @@ pull_request_rules:
       - author=renovate[bot]
       - check-success=Lint
       - check-success=Web - Test
+      - check-success=Mobile - Test
       - check-success=API - Test
+      - check-success=API - Stryker
       - check-success=Coverage
       - check-success=Web - Lighthouse
       - check-success=Web - Storybook
