--- a/package.json
+++ b/package.json
@@ -25,8 +25,8 @@
     "lint:js": "eslint . --ext .js,.ts,.tsx",
     "lint:js:report": "eslint-nibble . --ext .js,.ts,.tsx",
     "lint:js:fix": "eslint . --ext .js,.ts,.tsx --fix",
-    "lint:css": "stylelint \"**/*.css\" \"!**/build/**\" \"!**/dist/**\" \"!**/coverage/**\"",
-    "lint:css:fix": "stylelint \"**/*.css\" \"!**/build/**\" \"!**/dist/**\" \"!**/coverage/**\" --fix",
+    "lint:css": "stylelint **/*.css",
+    "lint:css:fix": "stylelint **/*.css --fix",
     "lint:sol": "solhint **/*.sol",
     "lint:sol:fix": "solhint **/*.sol --fix",
     "test": "cd web && npm test && cd ../mobile && npm test && cd ../api && npm test",
