--- a/web/package.json
+++ b/web/package.json
@@ -52,6 +52,7 @@
     "@opentelemetry/api": "0.18.1",
     "@opentelemetry/exporter-collector": "0.18.0",
     "@opentelemetry/instrumentation": "0.18.0",
+    "@opentelemetry/instrumentation-document-load": "0.14.0",
     "@opentelemetry/instrumentation-xml-http-request": "0.18.0",
     "@opentelemetry/tracing": "0.18.0",
     "@opentelemetry/web": "0.18.0",
