--- a/package.json
+++ b/package.json
@@ -61,7 +61,9 @@
     "lint-staged": "10.5.4",
     "nyc": "15.1.0",
     "prettier": "2.2.1",
+    "prettier-plugin-solidity": "1.0.0-beta.6",
     "solhint": "3.3.4",
+    "solhint-plugin-prettier": "0.0.5",
     "stylelint": "13.12.0",
     "stylelint-a11y": "1.2.3",
     "stylelint-config-prettier": "8.0.2",
