--- a/.eslintignore
+++ b/.eslintignore
@@ -1,14 +1,15 @@
 # https://eslint.org/docs/user-guide/configuring/ignoring-code#the-eslintignore-file
 
+# Anywhere
 **/.DS_Store
-**/.env.development.local
-**/.env.production.local
 **/__pycache__
 **/node_modules
 
-.idea
-coverage
+# Root
+/.idea
+/coverage
 
+# Directories
 api/.clinic
 api/.stryker-tmp
 api/build
@@ -32,4 +33,5 @@ web/public/sitemap.xml
 web/storybook-static
 web/tmp
 
+# .eslintignore specific
 web/src/shared/libs
