--- a/.gitignore
+++ b/.gitignore
@@ -1,14 +1,15 @@
-# https://docs.github.com/en/github/using-git/ignoring-files
+# https://git-scm.com/docs/gitignore
 
+# Anywhere
 **/.DS_Store
-**/.env.development.local
-**/.env.production.local
 **/__pycache__
 **/node_modules
 
+# Root
 /.idea
 /coverage
 
+# Directories
 api/.clinic
 api/.stryker-tmp
 api/build
@@ -31,3 +32,7 @@ web/coverage
 web/public/sitemap.xml
 web/storybook-static
 web/tmp
+
+# .gitignore specific
+**/.env.development.local
+**/.env.production.local
