--- a/.prettierignore
+++ b/.prettierignore
@@ -1,12 +1,15 @@
 # https://prettier.io/docs/en/ignore.html#ignoring-files-prettierignore
 
+# Anywhere
 **/.DS_Store
 **/__pycache__
 **/node_modules
 
+# Root
 /.idea
 /coverage
 
+# Directories
 api/.clinic
 api/.stryker-tmp
 api/build
