--- a/.solhintignore
+++ b/.solhintignore
@@ -1,14 +1,15 @@
 # https://protofire.github.io/solhint/#configuration
 
+# Anywhere
 **/.DS_Store
-**/.env.development.local
-**/.env.production.local
 **/__pycache__
 **/node_modules
 
+# Root
 /.idea
 /coverage
 
+# Directories
 api/.clinic
 api/.stryker-tmp
 api/build
