--- a/.stylelintignore
+++ b/.stylelintignore
@@ -1,14 +1,15 @@
 # https://stylelint.io/user-guide/ignore-code#files-entirely
 
+# Anywhere
 **/.DS_Store
-**/.env.development.local
-**/.env.production.local
 **/__pycache__
 **/node_modules
 
+# Root
 /.idea
 /coverage
 
+# Directories
 api/.clinic
 api/.stryker-tmp
 api/build
