--- a/docker/opentelemetry-collector/otel-collector-config.yaml
+++ b/docker/opentelemetry-collector/otel-collector-config.yaml
@@ -13,15 +13,14 @@ exporters:
 
 processors:
   batch:
-  queued_retry:
 
 service:
   pipelines:
     traces:
       receivers: [otlp]
       exporters: [jaeger]
-      processors: [batch, queued_retry]
+      processors: [batch]
     metrics:
       receivers: [otlp]
       exporters: [prometheus]
-      processors: [batch, queued_retry]
+      processors: [batch]
