--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -44,6 +44,7 @@ jobs:
           npm run lint:js
           npm run lint:css
           npm run lint:sol
+          npm run lint:md
 
   web-test:
     name: Web - Test
